2012-03-02  Seiko Epson Corporation <linux-printer@epson.jp>
	* db/source/printer/Epson-Stylus_SX205.xml,
         db/source/printer/Epson-Stylus_SX215.xml,
         db/source/printer/Epson-Stylus_SX405.xml,
         db/source/printer/Epson-Stylus_SX415.xml,
         db/source/printer/Epson-Stylus_TX203.xml,
         db/source/printer/Epson-Stylus_TX209.xml,
         db/source/printer/Epson-Stylus_TX213.xml,
         db/source/printer/Epson-Stylus_TX219.xml,
         db/source/printer/Epson-Stylus_TX409.xml,
         db/source/printer/Epson-Stylus_TX419.xml,
         db/source/driver/epson-escpr.xml: 
         Removed 10 printers because these are not sold until now.

2012-03-02  Seiko Epson Corporation <linux-printer@epson.jp>
	* db/source/printer/Epson-WP-4090.xml,
          db/source/printer/Epson-WP-4091.xml,
          db/source/printer/Epson-WP-4092.xml,
          db/source/printer/Epson-WP-4095.xml,
          db/source/printer/Epson-WP-4590.xml,
          db/source/printer/Epson-WP-4592.xml,
          db/source/printer/Epson-WP-4595.xml,
          db/source/driver/epson-escpr.xml: added 7 printers.

2012-02-20  Seiko Epson Corporation <linux-printer@epson.jp>
	* db/source/printer/epson-escpr.xml:
	  Changed the download server from Avasys to Epson.

2012-02-14 David Williams <dwilliams@ricohsv.com>
	* db/source/PPD/Lanier/PS/Lanier-SP_4310N_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-SP_4310N_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_4310N_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_4310N_PS.ppd,
	  db/source/printer/Lanier-SP_4310N.xml,
	  db/source/printer/NRG-SP_4310N.xml,
	  db/source/printer/Ricoh-Aficio_SP_4310N.xml,
	  db/source/printer/Savin-SP_4310N.xml: added four printers and their info files

2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/ibmpro-Resolution.xml: Added "Resolution" option to "ibmpro"
	  driver. Without specifying the resolution the driver does not work
	  (Debian bug #554769).