@@ -190,5 +190,8 @@
     <printer>
       <id>printer/Xerox-WorkCentre_7345</id>
     </printer>
+    <printer>
+      <id>printer/Xerox-Phaser_3160N</id>
+    </printer>
   </printers>
 </driver>
