@@ -1,0 +1,23 @@
+<printer id="printer/Xerox-Phaser_3160N">
+  <make>Xerox</make>
+  <model>Phaser 3160N</model>
+  <mechanism>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <pcl level="6" />
+  </lang>
+  <functionality>B</functionality>
+  <driver>pxlcolor</driver>
+  <comments>
+    <en>
+      Note that this printer, the "N" version does not work with SpliX as the
+      version without "N" does.
+    </en>
+  </comments>
+</printer>
