@@ -1,3 +1,9 @@
+2012-03-06  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Xerox-Phaser_3160N.xml, driver/pxlcolor.xml: Added Xerox
+	  Phaser 3160N. This printer does not work with SpliX but works as
+	  a PCL-XL printer with the "pxlcolor" driver (Ubuntu bug #945294).
+
 2012-03-02  Seiko Epson Corporation <linux-printer@epson.jp>
 	* db/source/printer/Epson-Stylus_SX205.xml,
          db/source/printer/Epson-Stylus_SX215.xml,
